crates/sui-graphql-macros/tests/compile/type_validation_question_mark_without_option.rs
use sui_graphql_macros::Response;

#[derive(Response)]
struct R {
    #[field(path = "chainIdentifier?")]
    id: String,
}

fn main() {}
